deplacement app.ts dans scripts

--- a/ServeurSide/index.html
+++ b/ServeurSide/index.html
@@ -13,6 +13,6 @@
 <lecteur></lecteur>
 
 
-    <script>System.import('app');</script>
+    <script>System.import('Scripts/app');</script>
 </body>
 </html>
