--- a/ServeurSide/index.html
+++ b/ServeurSide/index.html
@@ -9,10 +9,11 @@
     <script src="Scripts/flac.js"></script>
 </head>
 <body>
-    <!-- The app component created in app.ts -->
+    <artistlist></artistlist>
 <lecteur></lecteur>
 
 
     <script>System.import('Scripts/app');</script>
+    <script>System.import('Scripts/artistList');</script>
 </body>
 </html>
