--- a/ServeurSide/index.html
+++ b/ServeurSide/index.html
@@ -7,6 +7,7 @@
     <script src="https://code.angularjs.org/2.0.0-alpha.28/angular2.dev.js"></script>
     <script src="Scripts/aurora.js"></script>
     <script src="Scripts/flac.js"></script>
+    <script src="Scripts/ArtistService.js"></script>
 </head>
 <body>
     <artistlist></artistlist>
